<package format="3">
    <name>common</name>
    <version>0.0.1</version>
    <description>Commin utilities</description>
    <maintainer email="simthkbro@gmail.com">DoubleAid</maintainer>
    <license>TODO</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    
    <depend>rclcpp</depend>
    <depend>fmt</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>